# mca-tools

./: .gitignore  README.md  coincidencias.py  flake.nix  peakSelector.py  pyproject.toml  translations.py  uncertainty.py
Test/: Background.mca
src/mca_tools/: __init__.py  calibration.py  helpers.py  peakSelector.py  regresion.py  translations.py
test/: Bi.mca  Co.mca  Co.txt  test_peakSelector.py
