[project]
name = "mca-tools"
version = "0.1.0"
description = "Set of tools to postprocess the data of a spectrogram made with a Multichannel analyzer (mca) "
readme = "README.md"
authors = [
    { name = "Diego Couto", email = "mail@diegocoutogarcia.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
